--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <header class="header">
-<a href ="" class="logo">JMS</a>
+<a href ="" class="logo">JJMS</a>
 <nav class="nav-bar">
 	<a href="">Home</a>
 	<a href="#aboutme">About</a>
