--- a/index.html
+++ b/index.html
@@ -4,82 +4,127 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
-
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<header class="header">
-<a href ="" class="logo">JJMS</a>
-<nav class="nav-bar">
-	<a href="">Home</a>
-	<a href="#aboutme">About</a>
-	<a href="">Portfolio</a>
-	<a href="">Contact</a>
-</nav>
-</header>
-<section class="home">
-	<div class="home-content">
-		<h1>Hi, I'm Joshua</h1>
-		<h3>Full Stack Developer</h3>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	 
+    	<nav class="d-flex gap-5 justify-content-end mt-4 p-3">
+		<a href="#home">Home</a>
+		<a href="#section">Porfolio</a>
+		<a href="#aboutme">About me</a>
+		<a href="">Contact</a>
+		</nav>
+
+<div class="containter">
+	<section class= "row justify-content-center mt-5" id="home">
+			<div class="col d-flex justify-content-center ms-6 col-lg-6 col-md-6">
+			<img src="img4.jpg" class="img-fluid rounded-circle shadow-4-strong">
+		</div>
+		<div class="d-grid justify-content-center col-lg-6">
+		<h3 class="text-center">HI I'M JOSH</h3>
+		<h2	class="text-danger text-center">FULL STACK DEVELOPER</h2>
+		<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.<br><button type="button" class="btn btn-primary">Primary</button><button type="button" class="btn btn-primary">Primary</button></p>
+		</div>
+
+	</section>
+	</div>
+
+<div class="containter">
+
+	<section class= "row justify-content-center mt-5" id="aboutme">
+		<div class="d-grid justify-content-center col-lg-6 col-mx-md-4">
+		<h3 class="text-center">ABOUT ME</h3>
+		<h2	class="text-center">Joshua Mark Sendico</h2>
+		<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<div class="btn-box">
-			<a href="">Hire Me</a>
-				<a href="">Lets Talk</a>
-		</div>
+	
+ <div id="section-row"  class="row">
+                <div id="section-col-1" class="col-lg-4 col-md-6 mb-4 p-4" >
+                    <div class="text-center">
+                        <h3 class="ms-4">Front End</h3>
+                        <ul>
+                        	<li>HTML</li>
+                        	<li>CSS</li>
+                        	<li>BOOTSTRAP</li>
+                        	<li>JAVASCRIPT</li>
 
-	</div>
-</section>
-<section class="section1_container">
-   
-	<div class="section1_info" id="aboutme">
-       
-		<h1>About me</h1>
-		<h2>I m Joshua Mark Sendico</h2>
-		<p>There are many variations of passages Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro est, eligendi animi quisquam explicabo dolore, ullam ut asperiores sapiente assumenda quos, natus eius maiores. Temporibus possimus obcaecati earum molestiae minima!</p>
-		<div class="flex-container">
-			<div class="li_div">
-		<h6>Front End</h6>
-		<ul class = "section1_ul">
-			<li class="section1_li">HTML</li>
-			<li class="section1_li">CSS</li>
-			<li class="section1_li">Javascript</li>
-			<li class="section1_li">Bootstrap</li>
-		</ul>
-	</div>
-	<div class = li_div>
-	<h6>Back End</h6>
-	<ul class = "section2_ul">
-		<li class="section1_li">HTML</li>
-		<li class="section1_li">CSS</li>
-		<li class="section1_li">Javascript</li>
-		<li class="section1_li">Bootstrap</li>
-	</ul>
-	</div>
-</div>
-</div>
-    <img id = "section1_image" src="img4.jpg">
-</section>
+                        </ul>
+                    </div>
 
-<section class="Portfolio_container">
-	<div class="portfolio_info">
-		<h1>My Projects</h1>
-		
-	</div>
+                </div>
+                  <div id="section-col-2" class="col-lg-4 col-md-6 mb-4	p-4">
+                   <div class="text-center">
+                    	  <h3 class="ms-4">Back end</h3>
+                         <ul class="text-center">
+                        	<li>React</li>
+                        	<li></li>
+                        	<li></li>
+                        	    	<li></li>
+
+                        </ul>
+                </div>
+</div>
+ <div id="section-col-1" class="col-lg-4 col-md-12 mb-4 p-4" >
+                    <div class="text-center">
+                        <h3 class="ms-4">Tools</h3>
+                        <ul >
+                        	<li>GIT</li>
+                        	<li>SUBLIME</li>
+                        	<li>VISUAL STUDIO</li>
+                        	    	<li></li>
+                        	
+
+                        </ul>
+                    </div>
+
+
 	</section>
-
-
 </div>
-</section>
+ <section id="section" class="container">
+            <div id="section-row"  class="row">
+            	<h1 class="text-center">My Project</h3>
+                <div id="section-col-1" class="col-lg-4 col-md-6 mb-4 text-center" >
+                    <div id="section-web-dev" class="card">
+                        <h3>PROJECT 1</h3>
+                        <p>Ongoing...</p>
+                    </div>
+                </div>
+
+                <div id="section-col-2" class="col-lg-4 col-md-6 mb-4">
+                    <div id="section-design" class="card text-center border">
+                        <h3>Project 2</h3>
+                        <p>Ongoing...</p>
+                    </div>
+                </div>
+
+                <div id="section-col-3" class="col-lg-4 col-md-12 mb-4">
+                    <div id="section-marketing" class="card text-center border">
+                        <h3 >Project 3</h3>
+                        <p>Ongoing...</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+	<section>
+		<div>
+		<h3>Contact me</h3>
+		<h2>Contact form</h2>
+		</div>
+	</section>
+</main>
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
+
+	
