--- a/index.html
+++ b/index.html
@@ -93,21 +93,21 @@
  <section id="section" class="container">
             <div id="section-row"  class="row">
             	<h1 class="text-center">My Project</h3>
-                <div id="section-col-1" class="col-lg-4 col-md-6 mb-4 text-center" >
+                <div id="section-col-1" class="col-lg-4 col-md-6 mb-4 mt-5 text-center" >
                     <div id="section-web-dev" class="card">
                         <h3>PROJECT 1</h3>
                         <p>Ongoing...</p>
                     </div>
                 </div>
 
-                <div id="section-col-2" class="col-lg-4 col-md-6 mb-4">
+                <div id="section-col-2" class="col-lg-4  mt-5 col-md-6 mb-4">
                     <div id="section-design" class="card text-center border">
                         <h3>Project 2</h3>
                         <p>Ongoing...</p>
                     </div>
                 </div>
 
-                <div id="section-col-3" class="col-lg-4 col-md-12 mb-4">
+                <div id="section-col-3" class="col-lg-4 col-md-12 mt-5 mb-4">
                     <div id="section-marketing" class="card text-center border">
                         <h3 >Project 3</h3>
                         <p>Ongoing...</p>
