--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 <div class="containter">
 	<section class= "row justify-content-center mt-5" id="home">
-			<div class="col d-flex justify-content-center ms-6 col-lg-6 col-md-6">
+			<div class="col-12 col-lg-6 col-md-4 col-sm-4">
 			<img src="img4.jpg" class="img-fluid shadow-4-strong" id="image1">
 		</div>
-		<div class="d-grid justify-content-center col-lg-6">
+		<div class="d-grid justify-content-center col-12 col-lg-6 col-md-6 col-sm-6">
 		<h3 class="text-center">HI I'M JOSH</h3>
 		<h2	class="text-danger text-center">FULL STACK DEVELOPER</h2>
 		<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -38,7 +38,7 @@
 <div class="containter">
 
 	<section class= "row justify-content-center mt-5" id="aboutme">
-		<div class="d-grid justify-content-center col-lg-6 col-mx-md-4">
+		<div class="d-grid justify-content-center col-12 col-sm-6 col-md-6 col-lg-6">
 		<h3 class="text-center">ABOUT ME</h3>
 		<h2	class="text-center">Joshua Mark Sendico</h2>
 		<p class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
@@ -49,7 +49,7 @@
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	
  <div id="section-row"  class="row">
-				<div id="section-col-1" class="col-lg-4 col-md-12 mb-4 mt-4" >
+				<div id="section-col-1" class="col-12 col-sm-12 col-md-12 col-lg-4 mt-4" >
                     <div class="text-center">
                         <h4 class="ms-4">Front End</h3>
                         <ul>
