--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300..800;1,300..800&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300;1,300&family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="./index.css">
@@ -15,7 +15,8 @@
 <body>
 
 
-<nav class="navbar navbar-expand-lg navbar-light shadow-5-strong sticky-top" id="navid">
+
+<nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong sticky-top" id="navid">
   <div class="container back">
     <a class="navbar-brand" href="#">JMS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,6 @@
   </div>
 </nav>
 <div>
-
 <section id="landing">
   <div class="container p-md-5 " id="about">
     <div class="row justify-content-center my-md-5 my-md-5">
@@ -42,8 +42,8 @@
       </div>
       <div class="d-grid justify-content-center col-12 col-lg-6 col-md-7 col-sm-6 text-center">
         <div class="wrapper one">
-        <h4 id="text-title">
-             Hi! I'm <div class="drop-main">
+        <h4>
+             <div class="drop-main">Hi I'm &nbsp;
               <div class="j">J</div>
               <div class="o">o</div>
               <div class="s">s</div>
@@ -69,21 +69,21 @@
     <div class="row my-4 text-center" >
       <h3>My Projects </h3>
       <div class="col-lg-4 col-md-12">
-            <div class="p-4 border">
+            <div class="p-4 border-0">
               <div class="col-md-12 mb-4" >
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkS_TA3PTUTes5xYCqOFDblx78NsTNbKfHZA&s" class="image-fluid">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkS_TA3PTUTes5xYCqOFDblx78NsTNbKfHZA&s" class="image-fluid" id="zoom">
                 </div>
                 <h3>Ecommerce</h3>
-                <p>E-commerce is the buying and selling of goods and services online. It allows transactions to be completed over the internet, making shopping convenient and accessible from anywhere.</p>
+                <p>E-commerce is the buying and selling of goods and services online. It allows transactions to be completed over the internet,making shopping convenientaccessible from anywhere.offering features</p>
             </div>
         </div>
 
        
         <div class="col-lg-4 col-md-12">
           <div data-aos="fade-up">
-            <div class="p-4 border" id="section-design">
+            <div class="p-4 border-0" id="section-design">
               <div class="col-md-12 mb-4" >
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkS_TA3PTUTes5xYCqOFDblx78NsTNbKfHZA&s" class="image-fluid">
+              <img src="./images/43.jpg" class="image-fluid" id="zoom">
               </div>
                 <h3>BLOG</h3>
                 <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles or posts. Blogs can cover various topics and are often used for sharing personal thoughts
@@ -93,9 +93,9 @@
       </div>
 
         <div class="col-lg-4 col-md-12">
-            <div class="p-4 border" id="section-marketing">
+            <div class="p-4 border-0">
               <div class="col-md-12 col-sm-6 mb-4" >
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkS_TA3PTUTes5xYCqOFDblx78NsTNbKfHZA&s" class="image-fluid">
+              <img src="./images/online.jpg" class="image-fluid"  id="zoom">
               </div>
                 <h3>Online businesses</h3>
                 <p>Promote products or services from other companies and earn a commission for each sale made through your referral link. You can do this through a blog, YouTube channel, or social media.</p>
@@ -105,12 +105,12 @@
 </section>
 
 <section id="Tools">
-  <h3 class="text-center">&nbsp;&nbsp;Tools</h3>
+  
   <div class ="container" id="container1">
 
-  <div id="section-row"  class="row">
+  <div class="row">
 
-   
+     <h3 class="text-center" id ="tools_id">&nbsp;&nbsp;Tools</h3>
     <div id="section-col-1" class="col-12 col-sm-12 col-md-12 col-lg-4 mt-4" >
                 <div class="text-center">
             
@@ -119,80 +119,74 @@
                       <li>HTML <br>
             80% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate"></div>
             </div></li>
                       <li>CSS <br>
             80%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_2"></div>
             </div></li>
                       <li>BOOTSTRAP
             <br>
             70%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_3"></div>
             </div></li>
                       <li>JAVASCRIPT 
             <br>
             50%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_4"></div>
             </div></li>
 
                     </ul>
                 </div>
             </div>
     <div id="section-col-2" class="col-lg-4 col-md-12 mb-4 mt-4" >
-                <div class="text-center">
+                <div class="text-center" >
                     <h4 class="ms-4">&nbsp;	MERN</h3>
                     <ul>
                       <li>MongoDB <br>
-            80% 
+           60% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_5"></div>
             </div></li>
                       <li>Express <br>
             80%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_6"></div>
             </div></li>
                       <li>React
             <br>
             70%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_7"></div>
             </div></li>
                       <li>Node 
             <br>
             50%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_8"></div>
             </div></li>
 
                     </ul>
                 </div>
             </div>
-    <div id="section-col-2" class="col-lg-4 col-md-12 mb-4 mt-4" >
+    <div id="section-col-2" class="col-lg-4 col-md-12 mb-4 mt-4">
                 <div class="text-center">
-                    <h4 class="ms-4">&nbsp;Front End</h3>
+                    <h4 class="ms-4">&nbsp;Tools</h3>
                     <ul>
-                      <li>HTML <br>
+                      <li>VS CODE<br>
             80% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_9"></div>
             </div></li>
-                      <li>CSS <br>
-            80%
+                      <li>Sublime <br>
+            60%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:80%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_11"></div>
             </div></li>
-                      <li>BOOTSTRAP
-            <br>
-            70%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:70%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+                     <li>Sublime <br>
+            60%
+            <div class="progress">
+            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_12"></div>
             </div></li>
-                      <li>JAVASCRIPT 
-            <br>
-            50%<div class="progress">
-            <div class="progress-bar" role="progressbar" style="width:50%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-            </div></li>
-
                     </ul>
                 </div>
             </div>
@@ -202,28 +196,34 @@
 
 <section id="contact">
   <div class="container text-center">
-  <form>
-    <h3>Messaged us</h3>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Full Name</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1">
+       <div class="row">
+        <div class="col-md-6">
+          <h3>Contact Us</h3>
+   <form>
+                <div class="form-group">
+                    <label for="exampleFormControlInput1">Full Name</label>
+                    <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Enter your full name">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlInput2">Email Address</label>
+                    <input type="email" class="form-control" id="exampleFormControlInput2" placeholder="Enter your email">
+                </div>
+                <div class="form-group">
+                    <label for="exampleFormControlTextarea1">Message</label>
+                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" placeholder="Enter your message"></textarea>
+                </div>
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </form>
+        </div>
+        <div class="embed-responsive embed-responsive-21by9 col-md-6 ">
+            <h3>Find Us</h3>
+            <div> <iframe src="https://www.google.com/maps/embed/v1/place?q=Iloilo+City,+Iloilo,+Philippines&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8" id="map"></iframe></div>
+        </div>
     </div>
-    <div class="form-group">
-      <label for="exampleFormControlInput1">Email Address</label>
-      <input type="email" class="form-control" id="exampleFormControlInput1">
-    </div>
-    <label for="exampleFormControlTextarea1">Example textarea</label>
-    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-    <button type="submit">Submit</button>
-  </div>
-</form>
-
 </div>
-  
 
 </section>
-
-</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 </body>
 </html>
