--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 
 <nav class="navbar navbar-expand-lg navbar-dark shadow-5-strong sticky-top" id="navid">
-  <div class="container back">
+  <div class="container">
     <a class="navbar-brand" href="#">JMS</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -33,7 +33,7 @@
     </div>
   </div>
 </nav>
-<div>
+<div class = "container" id="landing1">
 <section id="landing">
   <div class="container p-md-5 " id="about">
     <div class="row justify-content-center my-md-5 my-md-5">
@@ -63,11 +63,11 @@
     </div>			
   </div>
 </section>
- 
+ </div>
    <section class="container" id="projects">
    
     <div class="row my-4 text-center" >
-      <h3>My Projects </h3>
+      <h3 id="myProject_id">My Projects </h3>
       <div class="col-lg-4 col-md-12">
             <div class="p-4 border-0">
               <div class="col-md-12 mb-4" >
@@ -119,22 +119,26 @@
                       <li>HTML <br>
             80% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate"></div>
             </div></li>
                       <li>CSS <br>
             80%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_2"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_2"></div>
             </div></li>
                       <li>BOOTSTRAP
             <br>
             70%<div class="progress">
-            <div class="progress-bar" role="progressbar"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_3"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar"aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_3"></div>
             </div></li>
                       <li>JAVASCRIPT 
             <br>
             50%<div class="progress">
-            <div class="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_4"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_4"></div>
             </div></li>
 
                     </ul>
@@ -147,22 +151,26 @@
                       <li>MongoDB <br>
            60% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_5"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_5"></div>
             </div></li>
                       <li>Express <br>
             80%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_6"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_6"></div>
             </div></li>
                       <li>React
             <br>
             70%<div class="progress">
-            <div class="progress-bar" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_7"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar"  aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_7"></div>
             </div></li>
                       <li>Node 
             <br>
             50%<div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_8"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_8"></div>
             </div></li>
 
                     </ul>
@@ -175,17 +183,20 @@
                       <li>VS CODE<br>
             80% 
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_9"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_9"></div>
             </div></li>
                       <li>Sublime <br>
             60%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_11"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_11"></div>
             </div></li>
                      <li>Sublime <br>
             60%
             <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_12"></div>
+            <div class="progress-bar progress-bar-striped 
+                        progress-bar-animated bg-danger" role="progressbar" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100" id="animate_12"></div>
             </div></li>
                     </ul>
                 </div>
