--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
         <div class="wrapper one">
         <h4>
              <div class="drop-main">Hi I'm &nbsp;
-              &nbsp; Joshua Mark Sendico
+              <div class="j">J</div>
+              <div class="o">o</div>
+              <div class="s">s</div>
+              <div class="h">h</div>
+              <div class="u">u</div> 
+              <div class="a">a</div>
+              &nbsp;  Mark Sendico
         </h4>
         </div>
         <h4 id="text-title">
