update my project

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
       <div class="col-lg-4 col-md-12">
             <div class="p-4 border-0">
               <div class="col-md-12 mb-4" >
-                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRkS_TA3PTUTes5xYCqOFDblx78NsTNbKfHZA&s" class="image-fluid" id="zoom">
+                 <a href="./shopping./index.html" target="_blank"><img src="./images/2.png" class="image-fluid" id="zoom"></a>
                 </div>
-                <h3>Ecommerce</h3>
-                <p>E-commerce is the buying and selling of goods and services online. It allows transactions to be completed over the internet,making shopping convenientaccessible from anywhere.offering features</p>
+                <h3>FOOD HUB</h3>
+                <p></p>
             </div>
         </div>
 
