--- a/shopping/index.html
+++ b/shopping/index.html
@@ -14,23 +14,36 @@
 <body>
 <nav>
 <ul>
-
-	<li><a href="#">Download</a></li>
-	<li><a href="#">Nitro</a></li>
-	<li><a href="#">Discover</a></li>
-	<li><a href="#">Safety</a></li>
-	<li><a href="#">Support</a></li>
+	<li><a href="#">Home</a></li>
+	<li><a href="#">Menu</a></li>
+	<li><a href="#">about</a></li>
 	<li><a href="#">blog</a></li>
-	<li><a href="#">career</a></li>
-	<button id="btn_nav">Open Discord</button>
+	<li><a href="#">Contact</a></li>
+
+
 </ul>
-
 </nav>
-<section>
-
+<section id = "Home">
+	<div class="container">
+		<div class="row">
+<div class="text-center" id="home_div">
+	<h1>Healthy Food Hub!</h1>
+	<p> nostrum enim blanditiis molestias consequatur? Recusandae quo nulla tempora consequatur expedita, laboriosam quam? Vel.</p>
+</div>
+</div>
+</div>
 </section>
 
-
+<section id = "Menu">
+	<div class="container text-center">
+		<div class="row">
+	<div id="menu_div">
+	<h1>Comming soon</h1>
+	<h3>Building</h3>
+</div>
+</div>
+</div>
+</section>
 
 
 
