--- a/shopping/index.html
+++ b/shopping/index.html
@@ -4,6 +4,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title></title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300;1,300&family=Quicksand:wght@419&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300;1,300&family=Quicksand:wght@456&display=swap" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="./index.css">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,11 +29,11 @@
 
 </ul>
 </nav>
-<section id = "Home">
-	<div class="container">
-		<div class="row">
+<section id ="Home">
+	<div class="container-fluid">
+			<div class="row Justify-content-center" id="ekek">
 <div class="text-center" id="home_div">
-	<h1>Healthy Food Hub!</h1>
+	<h1 id="Healthy_h1">Healthy Food Hub!</h1>
 	<p> nostrum enim blanditiis molestias consequatur? Recusandae quo nulla tempora consequatur expedita, laboriosam quam? Vel.</p>
 </div>
 </div>
@@ -35,16 +41,202 @@
 </section>
 
 <section id = "Menu">
-	<div class="container text-center">
+	<div class="container text-center gap-4">
 		<div class="row">
 	<div id="menu_div">
-	<h1>Comming soon</h1>
-	<h3>Building</h3>
+	<h4 id="menu_h4">Yummy & Delicious</h4>
+	<h3>Chef's Iconic Menus</h3>
+</div>
+   
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>Al Carne</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles </p>
+        </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>Al Hotdog</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in 
+              
+                </p>
+            </div>
+        </div>
+      </div>
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles or posts. 
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src=./images/3.jpg class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+
+  <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically 
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+
+
+
+
+  <div class="col-lg-4 col-md-12 example ">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
 </div>
 </div>
 </div>
+
+</div>
+
+
 </section>
 
+<section id = "Desert_Section">
+	<div class=" container text-center">
+		<div class="row Justify-content-center" id="ekek">
+	<div id="desert">
+	<h4 id="desert_id">Dessert</h4>
+	<h3>Chef's Iconic Menus</h3>
+</div>
+   
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="pt-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>Al Carne</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles </p>
+        </div>
+        </div>
+      </div>
+
+      <div class="col-lg-4 col-md-12 example ">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>Al Hotdog</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in 
+              
+                </p>
+            </div>
+        </div>
+      </div>
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3 id="h3_hover">ekek</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles or posts. 
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+        <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src=./images/3.jpg class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+
+  <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically 
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+
+
+
+
+  <div class="col-lg-4 col-md-12 example">
+          <div data-aos="fade-up">
+            <div class="p-4 border-0" id="section-design">
+              <div class="col-md-12 mb-4" >
+              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+              </div>
+                <h3>AL sisig</h3>
+                <p>A blog is a website or section of a website where regularly updated content is published, typically in the
+                </p>
+                </p>
+            </div>
+        </div>
+      </div>
+</div>
+</div>
+</div>
+
+</div>
+
+
+</section>
 
 
 </body>
