--- a/shopping/index.html
+++ b/shopping/index.html
@@ -41,16 +41,17 @@
 </section>
 
 <section id = "Menu">
-	<div class="container text-center gap-4">
-		<div class="row">
+	<div class="container text-center">
+<div class="row Justify-content-center" id="ekek">
 	<div id="menu_div">
 	<h4 id="menu_h4">Yummy & Delicious</h4>
 	<h3>Chef's Iconic Menus</h3>
 </div>
    
+      
         <div class="col-lg-4 col-md-12 example">
           <div data-aos="fade-up">
-            <div class="p-4 border-0">
+            <div class="pt-4 border-0" id="section-design">
               <div class="col-md-12 mb-4" >
               <img src="./images/3.jpg" class="image-fluid" id="zoom">
               </div>
@@ -60,7 +61,7 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-12 example">
+      <div class="col-lg-4 col-md-12 example ">
           <div data-aos="fade-up">
             <div class="p-4 border-0">
               <div class="col-md-12 mb-4" >
@@ -79,7 +80,7 @@
               <div class="col-md-12 mb-4" >
               <img src="./images/3.jpg" class="image-fluid" id="zoom">
               </div>
-                <h3>AL sisig</h3>
+                <h3 id="h3_hover">ekek</h3>
                 <p>A blog is a website or section of a website where regularly updated content is published, typically in the form of articles or posts. 
                 </p>
                 </p>
@@ -117,7 +118,7 @@
 
 
 
-  <div class="col-lg-4 col-md-12 example ">
+  <div class="col-lg-4 col-md-12 example">
           <div data-aos="fade-up">
             <div class="p-4 border-0" id="section-design">
               <div class="col-md-12 mb-4" >
@@ -135,8 +136,6 @@
 </div>
 
 </div>
-
-
 </section>
 
 <section id = "Desert_Section">
