--- a/shopping/index.html
+++ b/shopping/index.html
@@ -6,6 +6,9 @@
 	<title></title>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Kanit:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300;1,300&family=Quicksand:wght@700&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Grey+Qo&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,276;1,276&family=Platypi:ital,wght@0,300;1,300&family=Quicksand:wght@419&family=Sedan:ital@0;1&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -235,6 +238,54 @@
 </div>
 
 
+</section>
+<section id ="uniqueitems">
+	
+<div class="container">
+    <div class="row Justify-content-center" id="ekek">
+    <!-- Salad Items -->
+    <h4 id="uniqueitems1">Favorite Items</h4>
+<h3 class =" text-center">For Unique Dining</h3>
+<div class="d-flex flex-column col-md-6 my-5 p-5 example">
+    <div class="col-md-6">
+
+       <h6 class="uniqueitems_id">Pumpkin Muffins</h6>
+        <p>
+In tellus integer feugiat scelerisque varius morbi enim nunc faucibus. Amet luctus venenatis.</p>
+    </div>
+    <div class="col-md-6">
+        <h6 class="uniqueitems_id">Baked Beans</h6>
+        <p>
+Semper feugiat nibh sed pulvinar. Magnis dis parturient montes nascetur ridiculus.</p>
+    </div>
+        <div class="col-md-6 ">
+        <h6 class="uniqueitems_id">Cheesy Bacon</h6>
+        <p>
+Faucibus et molestie ac feugiat sed lectus. Commodo ullamcorper a lacus vestibulum sed.</p>
+    </div>
+</div>
+    <!-- Apple Items -->
+
+    <div class="d-flex flex-column col-md-6 my-5 p-5 example">
+
+    <div class="col-12 col-md-6">
+        <h6 class="uniqueitems_id">Frozen Fruit</h6>
+        <p>
+Gres tempus turpis at metus scelerisque placerat nulla deumantos solicitud felis..</p>
+    </div>
+    <div class="col-md-6">
+        <h6 class="uniqueitems_id">Mixed Salad</h6>
+        <p>
+Risus viverra adipiscing at in tellus integer feugiat scelerisque. Imperdiet nulla malesuada.</p>
+    </div>
+    <div class="col-md-6">
+        <h6 class="uniqueitems_id">Salmon Tacos</h6>
+        <p>
+Dignissim convallis aenean et tortor at risus viverra adipiscing. Elementum tempus sed.</p>
+    </div>
+</div>
+</div>
+    
 </section>
 
 
