--- a/shopping/index.html
+++ b/shopping/index.html
@@ -34,12 +34,26 @@
 </nav>
 <section id ="Home">
 	<div class="container-fluid">
-			<div class="row Justify-content-center" id="ekek">
-<div class="text-center" id="home_div">
-	<h1 id="Healthy_h1">Healthy Food Hub!</h1>
-	<p> nostrum enim blanditiis molestias consequatur? Recusandae quo nulla tempora consequatur expedita, laboriosam quam? Vel.</p>
-</div>
-</div>
+<div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./images/1.jpg" class="d-block w-100 h-100" alt="...">
+    </div>
+    <div class="carousel-item">
+       <img src="./images/2.jpg" class="d-block w-100 h-100" alt="...">
+    </div>
+    <div class="carousel-item">
+       <img src="./images/3.jpg"class="d-block w-100 h-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
 </div>
 </section>
 
@@ -108,9 +122,10 @@
           <div data-aos="fade-up">
             <div class="p-4 border-0" id="section-design">
               <div class="col-md-12 mb-4" >
-              <img src="./images/3.jpg" class="image-fluid" id="zoom">
+        <img src="./images/3.jpg" class="image-fluid" id="zoom">
+<button class="btn btn-primary mt-5 mx-4" type="submit">Button</button><button class="btn btn-primary mt-5" type="submit">Button</button>
               </div>
-                <h3>AL sisig</h3>
+                <h3>Agsggsg</h3>
                 <p>A blog is a website or section of a website where regularly updated content is published, typically 
                 </p>
                 </p>
@@ -287,7 +302,7 @@ Dignissim convallis aenean et tortor at risus viverra adipiscing. Elementum temp
 </div>
     
 </section>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
 </body>
 </html>
