--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="col-lg-4 col-md-12">
             <div class="p-4 border-0">
               <div class="col-md-12 mb-4" >
-                 <a href="./shopping/index.html" target="_blank"><img src="./images/2.png" class="image-fluid" id="zoom"></a>
+                 <a href="https://jishuee.github.io/Shopping/" target="_blank"><img src="./images/2.png" class="image-fluid" id="zoom"></a>
                 </div>
                 <h3>FOOD HUB</h3>
                 <p></p>
