--- a/index.html
+++ b/index.html
@@ -43,16 +43,9 @@
       <div class="d-grid justify-content-center col-12 col-lg-6 col-md-7 col-sm-6 text-center">
         <div class="wrapper one">
         <h4>
-             <div class="drop-main">Hi I'm &nbsp;
-              <div class="j">J</div>
-              <div class="o">o</div>
-              <div class="s">s</div>
-              <div class="h">h</div>
-              <div class="u">u</div> 
-              <div class="a">a</div>
-              &nbsp;  Mark Sendico
+      Hi I'm Joshua Mark Sendico
         </h4>
-        </div>
+
         <h4 id="text-title">
           Full Stack Developer
      </h4>
