--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div data-aos="fade-up">
             <div class="p-4 border-0" id="section-design">
               <div class="col-md-12 mb-4" >
-                <a href="https://edengrace.ourlivedemo.net/" target="_blank"> <img src="./images/Eden.png" class="image-fluid" id="zoom"></a>
+                <a href="https://www.edengracemaids.com/" target="_blank"> <img src="./images/Eden.png" class="image-fluid" id="zoom"></a>
               </div>
                 <h3>EDEN GRACE</h3>
 
