--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <div data-aos="fade-up">
           <div class="p-4 border-0" id="section-design">
             <div class="col-md-12 mb-4" >
-              <a href="https://siarb.ourlivedemo.net/" target="_blank"> <img src="./images/Siarb.png" class="image-fluid" id="zoom"></a>
+              <a href="https://www.siarb.org.sg/" target="_blank"> <img src="./images/Siarb.png" class="image-fluid" id="zoom"></a>
             </div>
               <h3>Siarb</h3>
 
