--- a/index.html
+++ b/index.html
@@ -87,6 +87,21 @@
         </div>
       </div>
 
+
+    <div class="col-lg-4 col-md-12">
+      <div data-aos="fade-up">
+        <div class="p-4 border-0" id="section-design">
+          <div class="col-md-12 mb-4" >
+            <a href="https://darkgreen-horse-169705.hostingersite.com/" target="_blank"> <img src="" class="image-fluid" id="zoom"></a>
+          </div>
+            <h3>Dress</h3>
+
+
+        </div>
+    </div>
+  </div>
+
+	    
       <div class="col-lg-4 col-md-12">
         <div data-aos="fade-up">
           <div class="p-4 border-0" id="section-design">
